--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,4 +27,13 @@
 		"nodes/**/*.json",
 		"package.json",
 	],
+	"exclude": [
+		"**/*.test.ts",
+		"**/test/**/*",
+		"node_modules",
+		"dist",
+		"coverage",
+		"jest.config.js",
+		"jest.setup.js"
+	],
 }
