--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/n8n-io/n8n-nodes-arivo.git"
   },
   "engines": {
     "node": ">=20.15"
